ScheduleReportPackage/src/objects/Scheduled_Report_Export_Recipient__c.object
<CustomObject>
    <description>List of Users to receive email notification</description>
    <fields>
        <fullName>Custom_Email__c</fullName>
        <label>Custom Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scheduled_Report_Export_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_Report_Export__c</fullName>
        <label>Scheduled Report Export</label>
        <referenceTo>Scheduled_Report_Export__c</referenceTo>
        <relationshipLabel>Email Recipients</relationshipLabel>
        <relationshipName>Scheduled_Report_Export_Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>ExportId+UserId Stops duplicates</inlineHelpText>
        <label>UniqueId</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Scheduled Report Export Recipient</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Report Export Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>